Try to fix warning tooltip on mobile

--- a/app/assets/stylesheets/module-consultations.scss
+++ b/app/assets/stylesheets/module-consultations.scss
@@ -640,8 +640,6 @@ img.side_50 {
   width: 9px;
   height: 5px;
   background: url(image_path('tipsy_warning'));
-  bottom: 0;
-  left: 50%;
   margin-left: -4px;
   background-position: bottom left;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
